Correct spelling mistakes Add icons on education and download resume Correct spacings

--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,12 @@ body {
     background-color: #80a3b8;
     color: white;
   }
+
+  .small-btn {
+    font-size: 0.95rem; 
+    padding: 0.5rem 1rem;
+  }
+  
   
   /* Modal Styles */
   .modal {
@@ -130,7 +136,7 @@ body {
     padding: 2rem;
     border: 1px solid #888;
     width: 80%;
-    max-width: 400px;
+    max-width: 300px;
     text-align: center;
     border-radius: 8px;
   }
@@ -379,4 +385,29 @@ body {
     gap: 1rem;
     margin-top: 1.5rem;
   }
+  
+  .education-card.active .read-more-icon {
+    transform: rotate(180deg);
+  }
+
+  .education-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .read-more-icon {
+    font-size: 1.5rem;
+    transition: transform 0.3s;
+  }
+  
+  .read-more-icon.rotated {
+    transform: rotate(180deg);
+  }
+  
+  
+  
+
+
+  
   
